fix for images not showing
removed background-repeat: no-repeat and height: 100vh

--- a/styles.css
+++ b/styles.css
@@ -159,10 +159,8 @@ h3 {
     .background {
         background-attachment: fixed;
         background-position: center;
-        background-size: contain;
-        background-repeat: no-repeat;
-        height: 100vh;
-        width: 100%;
+        background-size: cover;
+        max-width: 100%;
         color: #ffffff;
         display: flex;
         flex-direction: column;
